# prog

./: .env  .isort.cfg  db.sqlite3  livraria_bkp.json  pyproject.toml  requirements.txt
core/: admin.py  models.py  serializers.py  views.py
core/migrations/: 0001_initial.py  0002_editora.py  0002_livro_capa.py  0003_autor_livro.py  0003_usuarioadmin.py  0004_alter_autor_email.py  0004_livro_autores_livro_editora.py
core/models/: __init__.py  categoria.py  editora.py  livro.py
core/serializers/: __init__.py  livro.py
core/views/: autor.py  categoria.py  editora.py  livro.py
livraria/: settings.py  urls.py
