[tool.poetry]
name = "livraria"
version = "0.1.0"
description = ""
authors = ["Letícia Patricio"]

[tool.poetry.dependencies]
python = "^3.8.10"
Django = "^4.1.3"
djangorestframework = "^3.14.0"
djangorestframework-simplejwt = "^5.2.2"
python-magic = "^0.4.27"
Pillow = "^9.3.0"
drf-spectacular = "^0.24.2"

[tool.poetry.dev-dependencies]

[tool.poetry.group.dev.dependencies]
isort = "^5.11.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
